Fix dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -47,3 +47,17 @@ body {
 ::-moz-selection {
     color: black !important;
 }
+
+:root {
+    &[data-bs-theme="dark"] {
+        color-scheme: dark;
+        --bs-body-color: #fff;
+        --bs-body-bg: #181818;
+    }
+
+    &[data-bs-theme="light"] {
+        color-scheme: light;
+        --bs-body-color: #fff;
+        --bs-body-bg: #181818;
+    }
+}
